# static_args

./: Cargo.toml
examples/: simple.rs
src/: lib.rs  unix.rs
src/win32/: mod.rs  sys.rs
