[package]
name = "static_args"
version = "0.2.1"
edition = "2021"
rust = "1.64"
description = "Get static args from the os"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/static_args"
readme = "README.md"
documentation = "https://docs.rs/static_args"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[features]
unsafe_impl = []

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[dev-dependencies]
libc = { version = "0.2.132", default-features = false }

[dependencies]
rustversion = "1.0.9"
